Fix weird codeblock sizing on mobile

--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -261,9 +261,6 @@ h2 span {
     padding-left: $whitespace-horizontal;
     padding-right: $whitespace-horizontal;
   }
-  .token {
-    display: inline-block;
-  }
 
   .line-highlight {
     background: rgba(255, 255, 255, 0.2);
@@ -1171,6 +1168,11 @@ header {
   .codeblock {
     margin: $whitespace-vertical 0;
     font-size: 0.9em;
+
+    /* This is doing weird things on iOS safari. Even fixing the font size, some code blocks are different sizes */
+    @media (max-width: 700px) {
+      font-size: 12px;
+    }
   }
 
   .note {
